syntax = "proto3";

option csharp_namespace = "Fibertest.DataCenter";

service c2d {
	rpc SendCommand(.c2dCommand) returns (.c2dResponse);
}

message c2dCommand {
	string json = 1;
	bool isEventSourcingCommand = 2;
	string clientConnectionId = 3;
}

message c2dResponse {
	string json = 1;
}
